# bayes-ab-viz

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/models/: beta_binomial.py  delta_lognormal.py  model.py  normal.py  normal_normal.py
src/utils/: templates.py
