[tool.poetry]
name = "bayes-ab-viz"
version = "0.1.0"
description = ""
authors = ["ymdpharm <ymdpharm@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "^1.8.1"
matplotlib = "^3.5.1"
black = "^22.3.0"
scipy = "1.6.1"
isort = "^5.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
